--- a/notion/.env
+++ b/notion/.env
@@ -1,2 +1,3 @@
 NOTION_TOKEN='secret_epg5fxwiHdLmh58HR3K70KEbjcRssWYqnOIzrIkQyiM'
 PARENT_PAGE_ID="21185b6bd4cc80b0b129f2ebc68965ce"
+NOTION_WEBHOOK_TOKEN='secret_HUj8kuqNkFS091PbTIRf50plPGOufDIBH0eSOqigRS'
