--- a/notion/.env
+++ b/notion/.env
@@ -1,7 +1,7 @@
-NOTION_TOKEN='secret_epg5fxwiHdLmh58HR3K70KEbjcRssWYqnOIzrIkQyiM'
-PARENT_PAGE_ID='21185b6bd4cc80b0b129f2ebc68965ce'
-NOTION_WEBHOOK_TOKEN='secret_HUj8kuqNkFS091PbTIRf50plPGOufDIBH0eSOqigRS'
+NOTION_TOKEN=secret_epg5fxwiHdLmh58HR3K70KEbjcRssWYqnOIzrIkQyiM
+PARENT_PAGE_ID=21185b6bd4cc80b0b129f2ebc68965ce
+NOTION_WEBHOOK_TOKEN=secret_HUj8kuqNkFS091PbTIRf50plPGOufDIBH0eSOqigRS
 
-TELEGRAM_BOT_TOKEN='7650936396:AAEJWIcu9bq8LcIyPGbDoZp1oMmKgH9d36Q'
-TELEGRAM_CHAT_ID='5155466395'
+TELEGRAM_BOT_TOKEN=7650936396:AAEJWIcu9bq8LcIyPGbDoZp1oMmKgH9d36Q
+TELEGRAM_CHAT_ID=5155466395
 PORT=5000
